[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.2"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-lexpr = "0.1.3"

[profile.release]
# panic = "abort"
debug = true
